API to update contact, and fixing seed data logic
